added a new workspace for the official react hook

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "packages/eventstore",
     "packages/node/json-stream",
     "packages/web/storage",
+    "packages/react",
     "examples/node",
     "examples/react"
   ]
