--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "workspaces": [
-    "packages/eventstore",
+    "packages/core",
     "packages/node/json-stream",
     "packages/web/storage",
     "packages/react",
