using the new cristaline workspace

--- a/examples/node/package.json
+++ b/examples/node/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "type": "module",
-  "name": "@aminnairi/eventstore-example-node",
+  "name": "@cristaline/example-node",
   "scripts": {
     "start": "tsx index.ts"
   },
