--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "type": "module",
-  "name": "@aminnairi/evenstore-react",
+  "name": "@cristaline/react",
   "peerDependencies": {
     "react": ">=18.0.0"
   }
