--- a/packages/web/storage/package.json
+++ b/packages/web/storage/package.json
@@ -1,5 +1,5 @@
 {
   "type": "module",
-  "name": "@aminnairi/eventstore-web-storage",
+  "name": "@cristaline/web-storage",
   "version": "0.1.0"
 }
