--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "name": "@cristaline/core",
+  "description": "An immutable database engine built on the Event Sourcing pattern.",
   "version": "0.1.0",
   "main": "index.ts",
   "devDependencies": {
