added a license field

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,6 +3,7 @@
   "name": "@cristaline/core",
   "description": "An immutable database engine built on the Event Sourcing pattern.",
   "version": "0.1.0",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^22.10.2"
   }
