--- a/packages/web/storage/package.json
+++ b/packages/web/storage/package.json
@@ -3,4 +3,5 @@
   "name": "@cristaline/web-storage",
   "description": "Web Storage API adapter based on the JSON stream format.",
   "version": "0.1.0",
+  "license": "MIT",
 }
