--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,6 +4,9 @@
   "description": "An immutable database engine built on the Event Sourcing pattern.",
   "version": "0.1.0",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/aminnairi/cristaline/issues"
+  },
   "devDependencies": {
     "@types/node": "^22.10.2"
   }
