--- a/packages/web/storage/package.json
+++ b/packages/web/storage/package.json
@@ -4,4 +4,7 @@
   "description": "Web Storage API adapter based on the JSON stream format.",
   "version": "0.1.0",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/aminnairi/cristaline/issues"
+  },
 }
