--- a/packages/node/json-stream/package.json
+++ b/packages/node/json-stream/package.json
@@ -7,6 +7,10 @@
   "bugs": {
     "url": "https://github.com/aminnairi/cristaline/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aminnairi/cristaline.git"
+  },
   "devDependencies": {
     "@types/node": "^22.10.2"
   }
