--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -7,6 +7,10 @@
   "bugs": {
     "url": "https://github.com/aminnairi/cristaline/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aminnairi/cristaline.git"
+  },
   "peerDependencies": {
     "react": ">=18.0.0"
   }
