--- a/packages/web/storage/package.json
+++ b/packages/web/storage/package.json
@@ -7,4 +7,8 @@
   "bugs": {
     "url": "https://github.com/aminnairi/cristaline/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aminnairi/cristaline.git"
+  }
 }
